# quantum-liquidity

./: .env.example  .gitignore  ARCHITECTURE.md  EVALUATION_REPORT.md  IMPLEMENTATION_GUIDE.md  LICENSE  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PROGRESS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SUMMARY.md  build-app.sh  docker-compose.yml
.github/workflows/: build-release.yml
config/: example.yaml  market_data.yaml
cpp/: CMakeLists.txt
cpp/apps/: CMakeLists.txt  backtest_main.cpp  execution_example.cpp  gateway_main.cpp  market_data_daemon.cpp  strategy_runner_main.cpp
cpp/examples/: CMakeLists.txt  market_data_example.cpp  oanda_live_example.cpp  strategy_example.cpp
cpp/include/quantumliquidity/analytics/: day_classifier.hpp  orb_analyzer.hpp
cpp/include/quantumliquidity/common/: config.hpp  logger.hpp  types.hpp  utils.hpp
cpp/include/quantumliquidity/execution/: execution_engine.hpp  execution_interface.hpp  execution_provider.hpp  position_manager.hpp  types.hpp
cpp/include/quantumliquidity/execution/providers/: mock_broker.hpp
cpp/include/quantumliquidity/market_data/: bar_aggregator.hpp  csv_feed.hpp  feed_interface.hpp  feed_manager.hpp  oanda_feed.hpp
cpp/include/quantumliquidity/persistence/: database.hpp  redis.hpp
cpp/include/quantumliquidity/risk/: risk_interface.hpp  risk_manager.hpp
cpp/include/quantumliquidity/strategy/: orb_strategy.hpp  strategy.hpp  strategy_interface.hpp  strategy_manager.hpp
cpp/src/analytics/: day_classifier.cpp  orb_analyzer.cpp
cpp/src/common/: CMakeLists.txt  config.cpp  logger.cpp  types.cpp  utils.cpp
cpp/src/execution/: CMakeLists.txt  execution_engine.cpp  order_manager.cpp  position_manager.cpp
cpp/src/execution/providers/: mock_broker.cpp
cpp/src/market_data/: CMakeLists.txt  bar_aggregator.cpp  feed_manager.cpp  redis_publisher.cpp  replay_feed.cpp
cpp/src/market_data/providers/: csv_feed.cpp  oanda_feed.cpp
cpp/src/persistence/: CMakeLists.txt  postgres_connection_pool.cpp  postgres_writer.cpp  redis_client.cpp  time_series_db.cpp
cpp/src/risk/: CMakeLists.txt  position_manager.cpp  risk_engine.cpp  risk_manager.cpp  risk_rules.cpp
cpp/src/strategy/: CMakeLists.txt  orb_strategy.cpp  strategy.cpp  strategy_context.cpp  strategy_engine.cpp  strategy_manager.cpp
cpp/src/strategy/strategies/: mean_reversion_strategy.cpp  orb_strategy.cpp  sentiment_filter.cpp
cpp/tests/: test_execution.cpp
data/: sample_ticks.csv
database/: schema.sql
desktop/: README.md  index.html  package.json
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src/api/: client.ts  mockData.ts  websocket.ts
desktop/src/components/: Chart.tsx  MetricsCard.tsx  PositionTable.tsx
desktop/src/hooks/: useAPI.ts
desktop/src/pages/: Dashboard.tsx  Positions.tsx  RiskMonitor.tsx
desktop/src/types/: api.ts
docs/: AUTO_MARKET_DATA.md  OANDA_SETUP.md  PHASE3_EXECUTION_RISK.md  PHASE4_REST_API.md  QUICK_START_LIVE_DATA.md
python/: pyproject.toml  requirements.txt
python/marketecho/: __init__.py
python/marketecho/analytics/: __init__.py  day_classifier.py  orb_analyzer.py
python/marketecho/common/: __init__.py  config.py  types.py
python/marketecho/historical_data/: __init__.py  service.py
python/marketecho/sentiment/: __init__.py  news_parser.py  sentiment_analyzer.py
python/quantumliquidity/analytics/: __init__.py  day_classifier.py  orb_analyzer.py
python/quantumliquidity/api/: cache.py  config.py  database.py  main.py  schemas.py
python/quantumliquidity/api/routes/: analytics.py  market_data.py  orders.py  positions.py  risk.py  sentiment.py  strategies.py  system.py  trades.py
python/quantumliquidity/api/websocket/: __init__.py  stream.py
python/quantumliquidity/sentiment/: __init__.py  news_scraper.py  sentiment_aggregator.py  sentiment_analyzer.py
